added postgres client(not tested); added home

--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "db-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
     "mssql": "^6.2.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pg": "^8.0.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
